--- a/src/app/components/users/student/course/quizzes/quizzes.component.html
+++ b/src/app/components/users/student/course/quizzes/quizzes.component.html
@@ -135,11 +135,11 @@
                   <div class="pl-2 pr-2 text-center">
                     <button
                       class="btn p-0"
-                      popover="View"
+                      matTooltip="Attempt Quiz"
                       triggers="mouseenter:mouseleave"
                       (click)="showQuiz(quiz)"
                     >
-                      <span> <i class="text-primary fa fa-eye"> </i> </span>
+                      <span> <i class="text-primary fa fa-pencil"> </i> </span>
                     </button>
                     <!-- <button
                       class="btn p-0 ml-2"
