--- a/src/app/components/users/student/requests/requestssent/requestssent.component.html
+++ b/src/app/components/users/student/requests/requestssent/requestssent.component.html
@@ -52,11 +52,11 @@
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Class:
+                <i class="icon-badge"></i> Class:
                 <strong> {{ request.data.className }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Subject:
+                <i class="icon-notebook"></i> Subject:
                 <strong> {{ request.data.subjectName }} </strong>
               </li>
             </ul>
@@ -92,11 +92,11 @@
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Class:
+                <i class="icon-badge"></i> Class:
                 <strong> {{ request.data.className }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Subject:
+                <i class="icon-notebook"></i> Subject:
                 <strong> {{ request.data.subjectName }} </strong>
               </li>
             </ul>
@@ -124,11 +124,11 @@
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Class:
+                <i class="icon-badge"></i> Class:
                 <strong> {{ request.data.className }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Subject:
+                <i class="icon-notebook"></i> Subject:
                 <strong> {{ request.data.subjectName }} </strong>
               </li>
             </ul>
