--- a/src/app/components/users/teacher/requests/requestssent/requestssent.component.html
+++ b/src/app/components/users/teacher/requests/requestssent/requestssent.component.html
@@ -1,3 +1,9 @@
+<mat-card>
+  <h2>
+    Sent Requests
+  </h2>
+</mat-card>
+<hr>
 <div class="row">
   <div class="col-6">
     <mat-form-field class="p-0">
@@ -42,11 +48,11 @@
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Class:
+                <i class="icon-badge"></i> Class:
                 <strong> {{ request.data.className }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Subject:
+                <i class="icon-notebook"></i> Subject:
                 <strong> {{ request.data.subjectName }} </strong>
               </li>
             </ul>
@@ -82,11 +88,11 @@
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Class:
+                <i class="icon-badge"></i> Class:
                 <strong> {{ request.data.className }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Subject:
+                <i class="icon-notebook"></i> Subject:
                 <strong> {{ request.data.subjectName }} </strong>
               </li>
             </ul>
@@ -114,11 +120,11 @@
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Class:
+                <i class="icon-badge"></i> Class:
                 <strong> {{ request.data.className }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Subject:
+                <i class="icon-notebook"></i> Subject:
                 <strong> {{ request.data.subjectName }} </strong>
               </li>
             </ul>
