--- a/src/app/components/users/student/course/assignments/assignments.component.html
+++ b/src/app/components/users/student/course/assignments/assignments.component.html
@@ -72,7 +72,7 @@
             <div class="pl-2 pr-2 text-center">
               <button
                 class="btn p-0"
-                popover="View"
+                matTooltip="View Assignment"
                 triggers="mouseenter:mouseleave"
                 (click)="viewDetails(assignment)"
               >
@@ -84,7 +84,7 @@
               <!-- *ngIf="assignment.data.filePath" -->
               <button
                 class="btn p-0"
-                popover="Download"
+                matTooltip="Download Assignment"
                 triggers="mouseenter:mouseleave"
               >
                 <a [href]="assignment.data.filePath" download>
