--- a/src/app/components/users/teacher/classrooms/classrooms.component.html
+++ b/src/app/components/users/teacher/classrooms/classrooms.component.html
@@ -1,10 +1,16 @@
-<!-- <p>
-  classrooms works!
-</p> -->
+
 
 <div class="animated fadeIn">
+<mat-card>
+<h2>
+  Class Rooms
+</h2>
+  
+</mat-card>
+<hr>
+
   <div class="row">
-    <div class="col-4">
+    <div class="col-12">
       <mat-form-field class="p-0">
         <mat-label>Select Academy</mat-label>
         <mat-select name="selectedAcademyId" [(ngModel)]="selectedAcademy">
@@ -18,6 +24,8 @@
         </mat-select>
       </mat-form-field>
     </div>
+  </div>
+
     <div
       class="col-8"
       *ngIf="selectedAcademy && classrooms ? classrooms.length == 0 : false"
@@ -26,28 +34,30 @@
         <h5>*You have no classroom in the selected academy.</h5>
       </div>
     </div>
+
+    
     <div class="col-4" *ngFor="let classroom of classrooms">
       <div class="card text-white bg-dark">
-        <div class="card-header h4 ">
-          {{ classroom.id }}
-          <button
+        <!-- <div class="card-header h4 "> -->
+          <!-- {{ classroom.id }} -->
+          <!-- <button
             class="btn btn-sm btn-warning  float-right ml-2"
             popover="Announcement"
             triggers="mouseenter:mouseleave"
             (click)="addAnnouncement()"
           >
             <span><i class="fa fa-bullhorn"></i> </span>
-          </button>
-        </div>
+          </button> -->
+        <!-- </div> -->
         <div class="card-body">
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Class :
+                <i class="icon-badge"></i> Class :
                 <strong> {{ classroom.data.class.className }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Teacher Name :
+                <i class="icon-user"></i> Teacher Name :
                 <strong> {{ classroom.data.teacher.teacherName }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
@@ -55,7 +65,7 @@
                 <strong> {{ classroom.data.students.length }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Subject :
+                <i class="icon-notebook"></i> Subject :
                 <strong> {{ classroom.data.subject.subjectName }} </strong>
               </li>
               Days :
@@ -67,11 +77,11 @@
                 <strong class="pl-4"> {{ day | titlecase }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Duration :
+                <i class="icon-clock"></i> Duration :
                 <strong> {{ classroom.data.duration }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Time :
+                <i class="icon-clock"></i> Time :
                 <strong> {{ classroom.data.time }} </strong>'O Clock
               </li>
             </ul>
@@ -80,4 +90,3 @@
       </div>
     </div>
   </div>
-</div>
