--- a/src/app/components/users/teacher/course/assignments/assignments.component.html
+++ b/src/app/components/users/teacher/course/assignments/assignments.component.html
@@ -221,10 +221,10 @@
             </thead>
             <tbody>
               <tr *ngFor="let assignment of assignments; index as i">
-                <td>{{i + 1}}</td>
+                <td>{{ i + 1 }}</td>
                 <td>
                   {{
-                    assignment.data.title ? assignment.data.title : 'No Title'
+                    assignment.data.title ? assignment.data.title : "No Title"
                   }}
                 </td>
                 <td>
@@ -242,19 +242,19 @@
                   <div class="pl-2 pr-2 text-center">
                     <button
                       class="btn p-0"
-                      popover="View"
+                      matTooltip="View Assignment"
                       triggers="mouseenter:mouseleave"
                       (click)="viewDetails(assignment)"
                     >
-                        <span>
-                          <i class="text-info fa fa-eye "> </i>
-                        </span>
+                      <span>
+                        <i class="text-info fa fa-eye "> </i>
+                      </span>
                     </button>
-                    
+
                     <button
-                    *ngIf="assignment.data.filePath"
+                      *ngIf="assignment.data.filePath"
                       class="btn p-0"
-                      popover="Download"
+                      matTooltip="Download Assignment"
                       triggers="mouseenter:mouseleave"
                     >
                       <a [href]="assignment.data.filePath" download>
@@ -265,12 +265,13 @@
                     </button>
                     <button
                       class="btn p-0"
-                      popover="Download"
+                      matTooltip="Delete Assignment"
                       triggers="mouseenter:mouseleave"
                       (click)="deleteAssignment(assignment)"
-                    >   <span>
-                          <i class="text-danger fa fa-trash"> </i>
-                        </span>
+                    >
+                      <span>
+                        <i class="text-danger fa fa-trash"> </i>
+                      </span>
                     </button>
                   </div>
                 </td>
