--- a/src/app/components/users/teacher/teacherdashboard/teacherdashboard.component.html
+++ b/src/app/components/users/teacher/teacherdashboard/teacherdashboard.component.html
@@ -1,4 +1,11 @@
 <div class="animated fadeIn">
+  <mat-card>
+    <h2 >
+      Registered Academies
+    </h2>
+  </mat-card>
+
+<hr>
   <div class="row">
     <div class="col-3 col-sm-6 col-md-4 col-lg-2 pb-4">
       <button
