--- a/src/app/components/users/student/course/assignments/assignments.component.html
+++ b/src/app/components/users/student/course/assignments/assignments.component.html
@@ -47,7 +47,8 @@
           <th>Title</th>
           <th>Posted On</th>
           <th>Due Date</th>
-          <!-- <th>Obtained Marks</th> -->
+          <th>Submitted On</th>
+          <th>Obtained Marks</th>
           <th>Total Marks</th>
           <th>Status</th>
           <th class="text-center">Controls</th>
@@ -63,11 +64,35 @@
           <td>
             {{ assignment.data.dueDate.toDate() | date }}
           </td>
-          <!-- <td>{{}}</td> -->
+          <td>
+            {{
+              submittedAssignmentDates[
+                submittedAssignmentIds.indexOf(assignment.id)
+              ].toDate() | date
+            }}
+          </td>
+          <td>
+            {{
+              submittedAssignmentMarks[
+                submittedAssignmentIds.indexOf(assignment.id)
+              ]
+            }}
+          </td>
           <td>
             {{ assignment.data.totalMarks ? assignment.data.totalMarks : 0 }}
           </td>
-          <td><span class="badge badge-success">Posted</span></td>
+          <td>
+            <span
+              class="badge badge-warning"
+              [hidden]="submittedAssignmentIds.includes(assignment.id)"
+              >Pending</span
+            >
+            <span
+              class="badge badge-success"
+              [hidden]="!submittedAssignmentIds.includes(assignment.id)"
+              >Submitted</span
+            >
+          </td>
           <td>
             <div class="pl-2 pr-2 text-center">
               <!-- *ngIf="assignment.data.assignment" -->
@@ -81,8 +106,14 @@
                   <i class="text-info fa fa-eye "> </i>
                 </span>
               </button>
-              <button class="btn p-1">
-                <a href="javascript:void()" (click)="fileInput.click()">
+              <button
+                class="btn p-1"
+                [hidden]="submittedAssignmentIds.includes(assignment.id)"
+              >
+                <a
+                  href="javascript:void()"
+                  (click)="fileInput.click(); assignmentId = assignment.id"
+                >
                   <span
                     popover="Submit Assignment"
                     triggers="mouseenter:mouseleave"
